# ultron_agent

./: # Code Citations.md  .copilot-context.json  .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  AI_TOOLKIT_SETUP.md  API.md  ARCHITECTURE_DESIGN.md  Architecture.md  CI  COMPONENT_SPECIFICATIONS.md  CONTINUE_CONFIG_COMPLETE.md  CONTINUE_CONTEXT_REFERENCE.md  CONTINUE_SETUP_GUIDE.md  CONTINUE_TESTING_GUIDE.md  CONTINUE_TEST_RESULTS.md  COPILOT_SETUP_GUIDE.md  CREDITS.md  Changelog.md  Contributing.md  DEVELOPMENT.md  ENHANCED_AI_INTEGRATION_COMPLETE.md  ENHANCED_AUTOMATION_SUMMARY.md  ENHANCEMENT_COMPLETE.md  ENHANCEMENT_SUMMARY.md  ESLINT_SETUP.md  FAQ.md  FEATURE_EXTRACTION_ANALYSIS.md  GUI_ARCHITECTURE.md  GUI_ASSISTANT_INTEGRATION.md  GUI_BUILD_MASTER_PLAN.md  GUI_COMPONENTS.md  GUI_DESIGN.md  GUI_DOCUMENTATION.md  GUI_IMPLEMENTATION_ROADMAP.md  GUI_INTEGRATION_PLAN.md  GUI_REQUIREMENTS.md  GUI_TEST_PLAN.md  (+217 more)
.github/: copilot-instructions.md
.github/prompts/: comprehensive-editing.prompt.md
.github/workflows/: ci.yml
assistant/: AI_ASSISTANT_PROJECT_REPORT.docx  AI_ASSISTANT_PROJECT_REPORT.md  deploy_url.txt  todo.md
assistant/ai-assistant/: .env.example  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml
automated_files/: file_1753721631.py
cache/: 77842865727b8ff45a98cdf7c5fd1dd0d2a367ddf60e43fb9bddd8e6f09d7683-0.10-vscode.mapping
docs/: ASSISTANT.md  improvements.docx  project_overview.md
gateway/: requirements.txt
gui/sub_tasks/: task_summary_ultron_pokedex_interface.md
gui/ultron_enhanced/: ULTRON_IMPLEMENTATION_GUIDE.docx  launch_ultron.py
gui/ultron_final/: config.json  start_ultron.py
gui/ultron_full_agent/: README.md  setup_full_agent.py
gui/ultron_pokedex_complete/: README.md  setup.py
gui/ultron_realtime_audio/: requirements.txt  setup_realtime.py  test_realtime_audio.py
gui/ultron_ultimate/: main.py  web_interface.html
logs/: ultron.jsonl
new pokedex/ultron_enhanced/: PROJECT_SUMMARY.md  README.md  ULTRON_IMPLEMENTATION_GUIDE.md  config.json  deploy.py  verify_frontend.py
new pokedex/ultron_final/: requirements.txt
new pokedex/ultron_full_agent/: README.docx  demo_agent_capabilities.py
new pokedex/ultron_local/: requirements_local.txt  ultron_local.py
public/: index.html
scripts/: run-assistant.ps1
src/: App.tsx  index.css
supabase/: deploy_url.txt
tests/: test_action_logger.py  test_action_logger_fixed.py  test_agent_core.py  test_agent_network.py  test_basic.py  test_brain.py  test_config.py  test_event_system.py  test_event_system_fixed.py  test_gui.py  test_memory.py  test_memory_fixed.py  test_ollama_manager.py  test_tools.py  test_utils.py  test_voice_manager.py
tools/: __init__.py  agent_network.py  audio_manager.py  base.py  blockchain_integration.py  code_execution_tool.py  database_tool.py  file_tool.py  geocode_tool.py  image_generation_tool.py  openai_tools.py  pochi_tool.py  project_generator_tool.py  quantum_computing.py  screen_reader_tool.py  system_control_tool.py  system_tool.py  web_search_tool.py
ultron_addons/: __init__.py  brain_extension.py  connectors.py  evolution.py  memory_enhanced.py  tools.py
ultron_agent/: __init__.py  api.py  config.py  core.py  errors.py  health.py  logging_config.py
ultron_assistant/: AUTOMATION_FEATURES.md  IMPLEMENTATION_COMPLETE.md  README.md  app.py  automation.py  ollama_client.py  run_ultron.bat  run_ultron_assistant.py  setup_ultron_assistant.py  voice.py
utils/: event_system.py  performance_monitor.py  startup.py  task_scheduler.py
web_gui/: app.js  index.html
(+273 files in other folders)
